--- a/latihan5/style.css
+++ b/latihan5/style.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 header,footer{
     background-color: red;
     padding: 25px;
@@ -25,3 +29,12 @@ article{
     background-color: green;
     padding: 25px;
 }
+@media only screen and (max-width: 600px) {
+    .container{
+        flex-direction: column;
+    }
+    main{
+        background-color: blue;
+        font-size: 100px;
+    }
+  }
